# darknet

./: .gitignore  Makefile  yolov3_modif.cfg  yolov3_reduced.cfg
darknet_dataset/: custom.data  custom_train.txt
darknet_dataset/custom/: image0000.txt  image0001.txt  image0002.txt  image0003.txt  image0004.txt  image0005.txt  image0006.txt  image0007.txt  image0008.txt  image0009.txt  image0010.txt  image0011.txt  image0012.txt  image0013.txt  image0014.txt  image0015.txt  image0016.txt  image0022.txt  image0023.txt  image0024.txt  image0025.txt  image0026.txt  image0027.txt  image0028.txt  image0029.txt  image0030.txt  image0031.txt  image0032.txt  image0033.txt  image0034.txt  image0035.txt  image0036.txt  image0037.txt  image0038.txt  image0039.txt  image0040.txt  image0041.txt  image0042.txt  image0043.txt  image17.txt  (+55 more)
examples/: darknet.c  detector.c  yolo.c
rust/: Cargo.toml  gemm.c
rust/src/: lib.rs
src/: classifier.c  convolutional_layer.c  detector.c  gemm.c  image.c  network.c  parser.c  super.c  writing.c  yolo_layer.c
