[package]

name = "rust"
version = "0.1.0"

authors = ["Tiberio D A R Ferreira <tiberiusferreira@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.65"
packed_simd = "0.3.3"
crossbeam = "*"

