[package]

name = "rust"
version = "0.1.0"

authors = ["Tiberio D A R Ferreira <tiberiusferreira@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.65"
packed_simd = "0.3.3"
crossbeam = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.2.0"
rayon = "1.2.0"

cblas = "*"
openblas-src = {version = "0.7.0", features=['system']}
#blasoxide = "0.3.2"
matrixmultiply = "0.2.3"
[profile.release]
lto = true
